recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var i, j: Int
      ^FourSquare:2: error: local variables must be initialized
  var i, j: Int
      ^FourSquare:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var i, j: Int
         ^FourSquare:2: error: local variables must be initialized
  var i, j: Int
         ^