recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  var i, j: Int
  for( i <- 0 to 3) {
    for( j <- 0 to 3) {
      forward(100.0)
      right(90.0)
    }
    right(90.0)
  }
}